# reddit-Place-Image-Formatter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
formatter/: __init__.py  core.py
tests/: test_core.py  test_web.py
web/: app.py
web/templates/: index.html
